Use compact array declarations
Use valueOf()