@@ -18,6 +18,7 @@ package org.apache.commons.beanutils.converters;
 
 import java.lang.reflect.Array;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Locale;
 
 import junit.framework.TestCase;
@@ -65,7 +66,7 @@ public class ArrayConverterTestCase extends TestCase {
      */
     public void testComponentIntegerConverter() {
 
-        final IntegerConverter intConverter = new IntegerConverter(new Integer(0));
+        final IntegerConverter intConverter = new IntegerConverter(Integer.valueOf(0));
         intConverter.setPattern("#,###");
         intConverter.setLocale(Locale.US);
         final ArrayConverter arrayConverter = new ArrayConverter(int[].class, intConverter, 0);
@@ -73,15 +74,15 @@ public class ArrayConverterTestCase extends TestCase {
         arrayConverter.setDelimiter(';');
 
         // Expected results
-        final int[]     intArray     = new int[] {1111, 2222, 3333, 4444};
+        final int[]     intArray     = {1111, 2222, 3333, 4444};
         final String    stringA      = "1,111; 2,222; 3,333; 4,444";
         final String    stringB      = intArray[0]+ ";" + intArray[1] + ";" + intArray[2] + ";" +intArray[3];
-        final String[]  strArray     = new String[] {""+intArray[0], ""+intArray[1], ""+intArray[2], ""+intArray[3]};
-        final long[]    longArray    = new long[] {intArray[0], intArray[1], intArray[2], intArray[3]};
-        final Long[]    LONGArray    = new Long[]    {new Long(intArray[0]),    new Long(intArray[1]),    new Long(intArray[2]),    new Long(intArray[3])};
-        final Integer[] IntegerArray = new Integer[] {new Integer(intArray[0]), new Integer(intArray[1]), new Integer(intArray[2]), new Integer(intArray[3])};
-        final ArrayList<String> strList = new ArrayList<String>();
-        final ArrayList<Long> longList = new ArrayList<Long>();
+        final String[]  strArray     = {""+intArray[0], ""+intArray[1], ""+intArray[2], ""+intArray[3]};
+        final long[]    longArray    = {intArray[0], intArray[1], intArray[2], intArray[3]};
+        final Long[]    LONGArray    = {Long.valueOf(intArray[0]),    Long.valueOf(intArray[1]),    Long.valueOf(intArray[2]),    Long.valueOf(intArray[3])};
+        final Integer[] IntegerArray = {Integer.valueOf(intArray[0]), Integer.valueOf(intArray[1]), Integer.valueOf(intArray[2]), Integer.valueOf(intArray[3])};
+        final ArrayList<String> strList = new ArrayList<>();
+        final ArrayList<Long> longList = new ArrayList<>();
         for (int i = 0; i < strArray.length; i++) {
             strList.add(strArray[i]);
             longList.add(LONGArray[i]);
@@ -214,16 +215,14 @@ public class ArrayConverterTestCase extends TestCase {
         final ArrayConverter arrayConverter = new ArrayConverter(int[].class, intConverter);
 
         // Test Data
-        final String[] array = new String[] {"10", "  11", "12  ", "  13  "};
-        final ArrayList<String> list = new ArrayList<String>();
-        for (String element : array) {
-            list.add(element);
-        }
+        final String[] array = {"10", "  11", "12  ", "  13  "};
+        final ArrayList<String> list = new ArrayList<>();
+        Collections.addAll(list, array);
 
         // Expected results
         String msg = null;
-        final int[]     expectedInt     = new int[] {10, 11, 12, 13};
-        final Integer[] expectedInteger = new Integer[] {new Integer(expectedInt[0]), new Integer(expectedInt[1]), new Integer(expectedInt[2]), new Integer(expectedInt[3])};
+        final int[]     expectedInt     = {10, 11, 12, 13};
+        final Integer[] expectedInteger = {Integer.valueOf(expectedInt[0]), Integer.valueOf(expectedInt[1]), Integer.valueOf(expectedInt[2]), Integer.valueOf(expectedInt[3])};
 
         // Test String[] --> int[]
         try {
@@ -268,7 +267,7 @@ public class ArrayConverterTestCase extends TestCase {
         //     - comma (",") to separate individual numbers
         //     - semi-colon (";") to separate lists of numbers
         final String matrixString = "11,12,13 ; 21,22,23 ; 31,32,33 ; 41,42,43";
-        final int[][] expected = new int[][] {new int[] {11, 12, 13},
+        final int[][] expected = {new int[] {11, 12, 13},
                                         new int[] {21, 22, 23},
                                         new int[] {31, 32, 33},
                                         new int[] {41, 42, 43}};
@@ -315,7 +314,7 @@ public class ArrayConverterTestCase extends TestCase {
      * Test Converting using the IntegerConverter as the component Converter
      */
     public void testInvalidWithDefault() {
-        final int[]  zeroArray  = new int[0];
+        final int[]  zeroArray  = {};
         final int[]  oneArray   = new int[1];
         final IntegerConverter intConverter = new IntegerConverter();
 
@@ -328,7 +327,7 @@ public class ArrayConverterTestCase extends TestCase {
      * Test Empty String
      */
     public void testEmptyString() {
-        final int[]  zeroArray  = new int[0];
+        final int[]  zeroArray  = {};
         final IntegerConverter intConverter = new IntegerConverter();
 
         checkArray("Empty String",  zeroArray, new ArrayConverter(int[].class, intConverter, -1).convert(int[].class, ""));
